# Longinus-Engine

./: .gitignore  CMakeLists.txt  CONVENTIONS.md  README.md
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  assets.cpp  assets.hpp  longinus.cpp  render.cpp  render.hpp  sprites.cpp  sprites.hpp  window.cpp  window.hpp
